<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Morse Code</string>
    <string name="translator">Translator</string>
    <string name="settings">Settings</string>
    <string name="dictionary">Dictionary</string>
    <string name="enter_text">Enter text to translate</string>
    <string name="translate">Translate</string>
    <string name="morse_translation">Morse code translation</string>
    <string name="play_morse">Play Morse Code</string>
    <string name="playback_speed">Playback Speed: %.1fx</string>
</resources>
